TEST_PROGRAMS/VALID/05/anon_struct_array_type_dec.go
/* Anonymous struct array type declaration. */

package main

type t [] struct {
	f string
}

func main() {
	// Do nothing
}
