TEST_PROGRAMS/INVALID/05/multi_packages.go
/* Multiple package statements. */

package main
package other // Error: Can't have multiple package declarations

func main() {
	// Do nothing
}
